fixed align profile pic.

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ nav ul li a:hover:after{
 .about img {
     height:auto ;
     width: 400px;
-    margin-bottom: 100px;
+    margin-top: 150px;
     
 }
 .about-text{
@@ -135,7 +135,7 @@ nav ul li a:hover:after{
     max-width: 95%;
     margin: 0 auto;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-around;
 }
 .about-text h2 {
